--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,33 @@
 {
-  "extends": ["eslint:recommended", "plugin:node/recommended", "prettier"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:node/recommended"
+  ],
   "rules": {
-    "node/exports-style": ["error", "module.exports"],
-    "node/prefer-global/buffer": ["error", "always"],
-    "node/prefer-global/console": ["error", "always"],
-    "node/prefer-global/process": ["error", "always"],
-    "node/prefer-global/url-search-params": ["error", "always"],
-    "node/prefer-global/url": ["error", "always"],
+    "node/exports-style": [
+      "error",
+      "module.exports"
+    ],
+    "node/prefer-global/buffer": [
+      "error",
+      "always"
+    ],
+    "node/prefer-global/console": [
+      "error",
+      "always"
+    ],
+    "node/prefer-global/process": [
+      "error",
+      "always"
+    ],
+    "node/prefer-global/url-search-params": [
+      "error",
+      "always"
+    ],
+    "node/prefer-global/url": [
+      "error",
+      "always"
+    ],
     "no-console": 0
   }
 }
