--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.16.4",
     "jquery": "^3.3.1",
     "mongoose": "^4.13.7",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "request-promise": "^4.2.2"
   }
 }
